# pmlr-v202-finzi23a

./: .gitignore  LICENSE  README.rst  other.toml  pyproject.toml  runs.sqlite
conf/: config.yaml
conf/dataset/: FitzHughNagumo.yaml  GaussianMixture.yaml  Lorenz.yaml  Pendulum.yaml  SimpleHarmonicOscillator.yaml
conf/experiment/: FitzHughNagumo.yaml  GaussianMixture.yaml  Lorenz.yaml  Pendulum.yaml  SimpleHarmonicOscillator.yaml  TrainUnconditioned.yaml
conf/model/: DiffusionVE.yaml  FlowMatchingOT.yaml  FlowMatchingVE.yaml
notebooks/: double_pendulum_diffusion.ipynb  event_histogram.ipynb  fitzhugh.ipynb  fitzhugh_old.ipynb  gaussian_mixture.ipynb  load_models_save_data.ipynb  lorenz.ipynb  nonlinear_schrodinger.ipynb  plots_fitzhugh.ipynb  plots_pendulum.ipynb  relative_error.ipynb  simple_harmonic_diffusion.ipynb  simple_harmonic_oscillator.ipynb  train_diagnostics.ipynb  train_simplified.ipynb
src/userdiffusion/: __init__.py  config.py  covariance_test.py  cs.py  datasets.py  diffusion.py  main.py  ode_datasets.py  ode_datasets_test.py  samplers.py  train.py  unet.py  unet_test.py
src/userfm/: callbacks.py  cs.py  datasets.py  diffusion.py  flow_matching.py  main.py  main_flow_matching.py  optimal_transport.py  plots.py  sde_diffusion.py  train_flow_matching.py  utils.py
tests/: fixtures.py  test_datasets.py
