[project]
name = "userdiffusion"
version = "0.1.0"
description = "M. A. Finzi, A. Boral, A. G. Wilson, F. Sha, and L. Zepeda-Nunez, “User-defined event sampling and uncertainty quantification in diffusion models for physical dynamical systems,” in Proceedings of the 40th international conference on machine learning, A. Krause, E. Brunskill, K. Cho, B. Engelhardt, S. Sabato, and J. Scarlett, Eds., in Proceedings of machine learning research, vol. 202. PMLR, Jul. 2023, pp. 10136–10152. [Online]. Available: https://proceedings.mlr.press/v202/finzi23a.html"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
]
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.1.0",
    "clu>=0.0.12",
    "jax[cuda12-local]>=0.4.35",
    "jupyterlab>=4.3.3",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.18.0",
    "tqdm>=4.67.1",
]

[project.scripts]
userdiffusion = "userdiffusion:main"

[tool.uv]
index-strategy = "unsafe-best-match"
link-mode = "symlink"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
